--- a/views/register.html
+++ b/views/register.html
@@ -8,11 +8,12 @@
   <meta name="description" content="Paymart - An e-commerce platform">
   <meta name="author" content="Stanley ye">
 
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
+  <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
 <body>
 <h1>Register page</h1>
-<div class="login-form"></div>
-  <script src="javascripts/login-form.js"></script>
+<div id="login-form"></div>
+
+<script src="javascripts/bundle.js"></script>
 </body>
